<?xml version="1.0"?>
<package>
  <name>ndt_omp</name>
  <version>0.0.0</version>
  <description>OpenMP boosted NDT and GICP algorithms</description>

  <maintainer email="koide@aisl.cs.tut.ac.jp">koide</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>

  <export>
  </export>
</package>
