<?xml version="1.0"?>
<package format="3">
  <name>ndt_omp</name>
  <version>0.0.0</version>
  <description>OpenMP boosted NDT and GICP algorithms</description>

  <maintainer email="koide@aisl.cs.tut.ac.jp">koide</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <depend>libpcl-all-dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
